--- a/WebApi.csproj
+++ b/WebApi.csproj
@@ -5,6 +5,10 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+        <PackageReference Include="MongoDB.Driver" Version="2.25.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.6.1" />
+        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.6.1" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.0" />
     </ItemGroup>
 </Project>
