--- a/appsettings.json
+++ b/appsettings.json
@@ -1,11 +1,18 @@
 ﻿{
-    "AppSettings": {
-        "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
-    },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
+  "AadeshPharmaDatabase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "AadeshPharma",
+    "AadeshPharmaCollection": "Medicines",
+    "UserCollectionName": "User"
+
+  },
+  "AppSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  }
 }
