--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,8 @@
     "ConnectionString": "mongodb+srv://nimse7220:Shubham7220%40@cluster1.ngbumts.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1",
     "DatabaseName": "AadeshPharma",
     "AadeshPharmaCollection": "Medicines",
-    "UserCollectionName": "User"
+    "UserCollectionName": "User",
+    "OrderCollectionName": "Order"
 
   },
   "AppSettings": {
