Dashboard Feature API

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "AadeshPharmaDatabase": {
-    "ConnectionString": "mongodb+srv://nimse7220:Shubham7220%40@cluster1.ngbumts.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1",
+    "ConnectionString": "Your mongodb connection string",
     "DatabaseName": "AadeshPharma",
     "AadeshPharmaCollection": "Medicines",
     "UserCollectionName": "User",
